--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Equipes de Nossa Senhora <br> Região Rio IV <br> Setor São Gonçalo B
+description: Cronograma do Recolhimento
